Ensure spacing values are using our source of truth variables

--- a/src/components/input/input.css
+++ b/src/components/input/input.css
@@ -1,4 +1,5 @@
 @import "../../styles/colors.css";
+@import "../../styles/spacing.css";
 @import "../../styles/typography.css";
 
 .input {
@@ -7,8 +8,8 @@
   font-family: var(--mavenlink-type-font-family);
   height: 32px;
   margin: 0;
-  padding-left: 8px;
-  padding-right: 8px;
+  padding-left: var(--spacing-medium);
+  padding-right: var(--spacing-medium);
 }
 
 .input:hover {
